Update azure-pipelines.yml for Azure Pipelines to run tests

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,9 +23,10 @@ steps:
 - script: |
     cd $(rootDir)
     npm install
+    npm run test
     npm run build
     cd ..
-  displayName: 'npm install and build'
+  displayName: 'npm install, test and build'
 
 - task: ArchiveFiles@2
   inputs:
