Update azure-pipelines.yml for Azure Pipelines with CI = true

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
 - script: |
     cd $(rootDir)
     npm install
-    npm run test
+    CI=true npm run test
     npm run build
     cd ..
   displayName: 'npm install, test and build'
